syntax = "proto3";
package filePb.v1;
import "google/protobuf/empty.proto";
import "api/qvbilam/page/v1/page.proto";
option go_package="file/api/qvbilam/file/v1;fileV1";


message ImageResponse {
  int64 id = 1;
  int64 userId = 2;
  string businessId = 3;
  string url = 4;
  int64 size = 5;
  int64 width = 6;
  int64 height = 7;
  string status = 8;
  string contentType = 9;
  string expand = 10;
  string createdAt = 11;
  string channel = 12;
}

message ImagesResponse {
  int64 total = 1;
  repeated ImagesResponse images = 2;
}

message UpdateImageRequest {
  int64 id = 1;
  int64 userId = 2;
  string businessId = 3;
  string url = 4;
  int64 size = 5;
  int64 width = 6;
  int64 height = 7;
  string status = 8;
  string contentType = 9;
  string expand = 10;
  string sha1 = 11;
  string channel = 12;
}

message GetImageRequest {
  int64 id = 1;
  string businessId = 2;
  string fileSha1 = 3;
}

message SearchImageRequest{
  repeated int64 id = 1;
  repeated int64 userId = 2;
  repeated string businessId = 3;
  string fileSha1 = 4;
  pagePb.v1.PageRequest page = 5;
}

message ExistsImageResponse {
  bool isExists = 1;
}

service Image {
  rpc Create (UpdateImageRequest) returns (ImageResponse);
  rpc Update (UpdateImageRequest) returns (google.protobuf.Empty);
  rpc Delete (UpdateImageRequest) returns (google.protobuf.Empty);
  rpc Get (SearchImageRequest) returns (ImagesResponse);
  rpc GetDetail (GetImageRequest) returns (ImageResponse);
  rpc Exists(GetImageRequest) returns (ExistsImageResponse);
}